[browser nav] Have singleton disposition behave differently from switch

We had SINGLETON_TAB and SWITCH_TO_TAB dispositions sharing a code
path. This change separates them such that singletons only search in
the current window for a tab, and fall-back to new-foreground-tab
instead of current-tab.

Bug: 807171, 807550
Change-Id: I0fb3bb75806269df0916359d4c89246640241660
Reviewed-on: https://chromium-review.googlesource.com/896745
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Kevin Bailey <krb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534279}
Former-commit-id: cc983247c218b60efbf1de5fe3e1f6f12dcaf160